--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
         "lodash": "^4.17.13",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.1.0",
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "bootstrap": "^4.4.1",
+        "popper.js": "^1.16.0",
+        "vue-router": "^3.1.3"
     }
 }
